# voxelmade

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: c-cpp.yml  cmake.yml
dependencies/glad/: CMakeLists.txt
dependencies/glad/src/: glad.c
dependencies/glad_/: CMakeLists.txt
dependencies/glad_/include/glad/: glad.h
dependencies/stb/: CMakeLists.txt
dependencies/vhm_asio/: CMakeLists.txt  README.md
src/: camera.h  engine.cpp  engine.h  engine_io.cpp  font.cpp  font.h  gfx.cpp  gfx.h  glm.h  logging.h  main.cpp  transform.h  types.h  vhm_engine.cpp  vhm_engine.h  vhm_gl.cpp  vhm_gl.h  vhm_io.cpp  vhm_io.h  vhm_log.h  vhm_memory.h  vhm_types.h
src/engine/: camera.cpp  camera.h  engine.cpp  engine.h  font.cpp  gamestate.h  gfx.h  transform.cpp  transform.h
src/engine/audio/: audio.cpp  audio.h  audioformat.cpp  audioformat.h
src/engine/gfx/: font.cpp  font.h  gfx.cpp  gfx.h  guirenderer.cpp  guirenderer.h
src/engine/gui/: guirenderer.cpp  guirenderer.h
src/engine/utility/: basicio.cpp  basicio.h  color.h  glm.h  io.cpp  io.h  types.h
src/game/gamestates/: menustate.cpp  menustate.h  playstate.cpp  playstate.h
src/utility/: basicio.h  logging.h
tests/: example_test.cpp  test.cpp
